samples/_failures_safe/1761404270_13287a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e6c328a.c: In function ‘main’:
./samples/SAFE/__tmp_7e6c328a.c:125: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_7e6c328a.c:124:5: error: expected declaration or statement at end of input
  124 |     for
      |     ^~~
